--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body {
     serif;
   font-size: 20px;
   margin: 0;
-  margin-right: -80px;
+  margin-right: ;
 }
 
 section {
@@ -21,7 +21,7 @@ section {
 }
 
 .first img {
-  width: 80%;
+  width: 90%;
 }
 
 span {
@@ -65,11 +65,22 @@ h5 {
 }
 
 #sec_image {
-  margin-left: 50px;
+  margin-left: 10px;
   margin-top: 50px;
 }
 
 #secnd_milestone {
   text-align: justify;
 
+}
+
+.milestone {
+  background-image: url(image-bg/music.png);
+  background-position: right;
+  background-size: 300px;
+  margin: 50px 10px;
+}
+#li_margin{
+  margin-left: -50px;
+  margin-top: 40px;
 }
