--- a/index.css
+++ b/index.css
@@ -3,10 +3,10 @@ body {
     serif;
   font-size: 20px;
   margin: 0;
-  
+
 }
 
-section {
+.flex-display {
   display: flex;
   background-image: url(image/top-banner.png);
   background-repeat: no-repeat;
@@ -24,8 +24,9 @@ section {
   width: 90%;
 }
 
-span {
+.ekeek {
   color: #5858fb;
+  display: inline;
 }
 
 .button_1 {
@@ -41,7 +42,7 @@ span {
 }
 
 a:hover {
-  background-image: linear-gradient(aqua, blue);
+  background-image: linear-gradient(aqua, rgb(87, 87, 166));
   transition: 5s;
 }
 
@@ -69,18 +70,72 @@ h5 {
   margin-top: 50px;
 }
 
-#secnd_milestone {
-  text-align: justify;
+#flex2 {
+  margin-top: 100px;
 
 }
 
-.milestone {
-  background-image: url(image/music.png);
-  background-position: right;
-  background-size: 300px;
-  margin: 50px 10px;
+.top_music {
+  margin-left: -100px;
 }
-#li_margin{
-  margin-left: -50px;
-  margin-top: 40px;
+
+
+#li_margin {
+  margin-left: 100px;
+
+}
+
+#ii_p {
+  margin-left: 100px;
+}
+
+
+
+.hit_song {
+  box-shadow: 10px 10px 40px gray;
+  width: 40%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-left: 10px;
+  border-left: 5px solid red;
+  border-radius: 10px;
+}
+
+.orange_colloe {
+  color: orange;
+}
+
+.link_song {
+  display: block;
+  text-decoration: none;
+  background-color: aquamarine;
+  padding: 10px 15px;
+  margin-right: 180px;
+  text-align: center;
+  color: black;
+  font-weight: 700;
+}
+
+footer {
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 50px;
+  font-family: cursive;
+  text-shadow: 2px 2px #6bceea;
+}
+
+span {
+  display: block;
+  color: orange;
+  text-align: center;
+  margin-bottom: 10px;
+
+}
+
+.arkoyta {
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 50px;
+  color: rgb(128, 0, 255);
+  font-weight: 800;
 }
